loyalcraft/web/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: loyalcraft-portal-service
  namespace: loyalcraft-portal
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 4000
  selector:
    app: loyalcraft-portal
