loyalcraft/web/k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-res
  namespace: loyalcraft-portal
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: loyalcraft.com
      http:
        paths:
          - path: '/'
            pathType: Prefix
            backend:
              service:
                name: loyalcraft-portal-service
                port:
                  number: 80
